--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,7 +4,7 @@ tasks:
       pip install -r requirements.txt
       npm i -g nodemon
       export PORT=3000
-      echo $PORT
+      echo the defined PORT in the 'init' is: $PORT
     command: |
       nodemon app.py
 
